--- a/app/package.json
+++ b/app/package.json
@@ -6,19 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --runInBand --coverage"
   },
   "dependencies": {
     "daisyui": "^2.24.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^27.5.1",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.8.2"
   }
 }
