--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^18.7.14",
+    "prettier": "^2.7.1",
     "@types/react": "^18.0.18",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
