--- a/app/package.json
+++ b/app/package.json
@@ -10,22 +10,24 @@
     "test": "jest --runInBand --coverage"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.1.1",
     "daisyui": "^2.24.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-debounce": "^4.0.0",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^18.7.14",
-    "prettier": "^2.7.1",
     "@types/react": "^18.0.18",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "jest": "^27.5.1",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^27.1.3",
     "typescript": "^4.8.2"
